force-app/main/default/objects/Reservation_line_item__c/Reservation_line_item__c.object-meta.xml
<CustomObject>
    <label>Reservation Line Item</label>
    <nameField>
        <label>Reservation Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reservation Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>