force-app/main/default/objects/Reservation_line_item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Reservation Line Items</relationshipLabel>
    <relationshipName>Reservation_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>