force-app/main/default/objects/Reservation_line_item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>List_Price__c</columns>
    <columns>Reservation__c</columns>
    <columns>Total_Price__c</columns>
    <columns>Discount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>